bog o notation child module